# Sus-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  build.bat  build_log.txt  docker-compose.yml  imgui.ini  run.bat
.devcontainer/: Dockerfile  devcontainer.json
assets/: .gitkeep.md
assets/shaders/: grid.frag  grid.vert  particle.frag  particle.vert  triangle.frag  triangle.vert
engine/ai/: EnemyAIComponent.cpp  EnemyAIComponent.h
engine/animation/: AnimationClip.cpp  AnimationClip.h  Animator.cpp  Animator.h  Skeleton.cpp  Skeleton.h
engine/audio/: AudioSystem.cpp  AudioSystem.h
engine/core/: Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  GlfwUserData.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Time.h  Types.h  Window.cpp  Window.h
engine/editor/: Editor.cpp  Editor.h
engine/physics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsSystem.cpp  PhysicsSystem.h
engine/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GridPipeline.cpp  GridPipeline.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  ParticlePipeline.cpp  ParticlePipeline.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  StbImage.cpp  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VkCheck.h  VmaImpl.cpp  VulkanContext.cpp  VulkanContext.h
engine/scene/: CharacterController.cpp  CharacterController.h  Component.h  Material.h  ParticleSystem.cpp  ParticleSystem.h  ProximityTriggerComponent.h  Scene.cpp  Scene.h  SceneObject.h  Transform.h
engine/ui/: UISystem.cpp  UISystem.h
game/: main.cpp
shaders/: .gitkeep.md
